--- a/education.html
+++ b/education.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <title>Education Page</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -9,9 +11,18 @@
       crossorigin="anonymous"
     />
     <link
+      href="https://getbootstrap.com/docs/5.3/assets/css/docs.css"
+      rel="stylesheet"
+    />
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href='css/education.css'>
   </head>
   <body>
@@ -42,7 +53,7 @@
     <p>Education page works!</p>
 
     <!-- Footer -->
-    <footer
+    <footer id="footer"
       class="text-center text-lg-start text-dark"
       style="background-color: #eceff1"
     >
