--- a/policies.html
+++ b/policies.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <title>Policies Page</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -9,10 +11,19 @@
       crossorigin="anonymous"
     />
     <link
+      href="https://getbootstrap.com/docs/5.3/assets/css/docs.css"
+      rel="stylesheet"
+    />
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
-    <link rel="stylesheet" href='css/policies.css'>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="css/policies.css" />
   </head>
   <body>
     <!-- Nav bar -->
@@ -39,10 +50,215 @@
       </li>
     </ul>
 
-    <p>Policies page works!</p>
+    <!-- Hero div -->
+    <div class="hero vh-100 d-flex align-items-center">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-7 mx-auto">
+            <h1 class="display-4 text-white">
+              Building Resilience: Engineering Against Earthquakes
+            </h1>
+            <p class="text-white my-3" style="font-size: 22px">
+              Discover how advanced engineering solutions and new building codes
+              are reshaping our approach to earthquake safety, significantly
+              reducing the impact on communities and infrastructure.
+            </p>
+            <a href="#intro" class="btn mr-3 btn-primary">Learn More</a>
+            <a href="#footer" class="btn btn-outline-light">Donate Here!</a>
+            >
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Introduction Section -->
+    <div id="intro">
+      <div style="display: flex; align-items: center">
+        <div style="flex: 1">
+          <!-- Carousel -->
+          <div
+            id="carouselExample"
+            class="carousel slide"
+            data-bs-ride="carousel"
+          >
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img
+                  src="images/StandingBuilding1.jpg"
+                  class="d-block w-100"
+                  alt="Ruins of a building post-earthquake"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="images/StandingBuilding2.jpg"
+                  class="d-block w-100"
+                  alt="Description of your second image"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="images/StandingBuilding3.jpg"
+                  class="d-block w-100"
+                  alt="Description of your third image"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="images/StandingBuilding4.jpg"
+                  class="d-block w-100"
+                  alt="Description of your fourth image"
+                />
+              </div>
+            </div>
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#carouselExample"
+              data-bs-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#carouselExample"
+              data-bs-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+          <!-- End of Carousel -->
+        </div>
+        <div id="textIntro" style="flex: 1">
+          <h1>Engineering for Earthquake Resilience: A New Model</h1>
+          <p>
+            As the dust settled following the massive earthquakes that shook
+            Turkey and Syria, a tale of two building philosophies emerged. While
+            traditional constructions crumbled, structures equipped with
+            advanced seismic technologies like Adana City Hospital withstood the
+            tremors, showcasing the critical impact of engineering innovation in
+            disaster-prone zones.
+          </p>
+          <p>
+            These seismic technologies, including isolation systems and dampers,
+            are designed to absorb seismic energy, significantly reducing the
+            transfer of motion to the structures they protect. This not only
+            preserves the integrity of buildings but also ensures they can
+            continue to function immediately after the quake, a crucial factor
+            for facilities like hospitals.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Construction Practices and Building Codes Section -->
+    <div class="container mt-4 unique-section">
+      <div class="row">
+        <div class="col-md-6 mb-3">
+          <h2 class="section-title" style="font-size: 35px; font-weight: bold">
+            Case Study: Adana City Hospital's Seismic Resilience
+          </h2>
+          <p style="font-size: 22px">
+            Amidst the devastation of the 2023 earthquakes in Turkey, Adana City
+            Hospital showed off the potential of modern seismic engineering. The
+            hospital's advanced seismic isolation systems effectively absorbed
+            the seismic shocks, preventing significant structural damage and
+            allowing the hospital to continue its operations without
+            interruption.
+          </p>
+        </div>
+        <div class="col-md-6">
+          <img
+            src="images/Sadana2.jpg"
+            alt="Turkish Construction Techniques"
+            class="img-fluid mb-3 section-image float-right"
+          />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <img
+            src="images/Sadana1.jpg"
+            alt="Evolution of Building Codes in Turkey"
+            class="img-fluid mb-3 section-image float-left"
+          />
+        </div>
+        <div class="col-md-6">
+          <p style="font-size: 22px">
+            This operational continuity is critical in disaster situations,
+            where medical facilities are most needed. The success of Adana City
+            Hospital underscores the importance of investing in seismic
+            technology not only to protect structures but also to ensure they
+            remain functional when they are most crucial.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div style="overflow: auto">
+      <img
+        src="images/SafetyPic.jpg"
+        alt="Challenges in Building Code Enforcement"
+        style="float: left; margin-right: 20px; width: 900px"
+      />
+      <h2 style="font-size: 40px; font-weight: bold">The Critical Role of Compliance in Building Safety</h2>
+      <p style="font-size: 25px">
+        Compliance with safety standards is not merely a regulatory requirement
+        but a critical measure that significantly impacts the resilience of
+        buildings during earthquakes. The 2023 earthquakes in Turkey highlighted
+        the dramatic difference in outcomes between buildings that adhered to
+        strict safety codes and those that did not. Buildings compliant with
+        modern safety standards sustained less damage and recorded fewer
+        casualties, clearly demonstrating the life-saving importance of these
+        regulations. This disparity stresses the urgent need for stricter
+        enforcement and adherence to building codes worldwide to enhance safety
+        and minimize earthquake damage.
+      </p>
+      <div style="clear: both"></div>
+    </div>
+
+    <div class="container mt-4">
+      <h2 class="mb-3" style="font-size: 40px; font-weight: bold">
+        Engineering Innovations: Seismic Isolation Devices and Dampers
+      </h2>
+      <p style="font-size: 25px">
+        Seismic isolation devices and dampers represent transformative
+        innovations in earthquake engineering, designed to enhance the safety
+        and integrity of buildings during seismic events. These systems function
+        by absorbing and redirecting the energy released during earthquakes,
+        much like shock absorbers in vehicles. Seismic isolators are installed
+        at the base of structures, allowing buildings to move somewhat
+        independently of ground motion, which significantly diminishes the force
+        transferred to the structure itself. Similarly, dampers help absorb
+        vibrational energy, acting as the building’s internal shock absorbers to
+        mitigate the effects of shaking. Together, these technologies have
+        proven effective in numerous real-world applications, safeguarding
+        structures and their occupants from severe earthquake impacts.
+      </p>
+      <div class="row justify-content-center">
+        <div class="col-md-6 text-center">
+          <img
+            src="images/SeismicDevice.jpg"
+            alt="Diagram of Seismic Isolation Device"
+            class="img-fluid mb-3 mx-auto d-block"
+          />
+          <p><strong>Diagram showcasing a seismic device</strong></p>
+        </div>
+      </div>
+    </div>
 
     <!-- Footer -->
     <footer
+      id="footer"
       class="text-center text-lg-start text-dark"
       style="background-color: #eceff1"
     >
