--- a/unpage.html
+++ b/unpage.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <title>Policies Page</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -9,10 +11,19 @@
       crossorigin="anonymous"
     />
     <link
+      href="https://getbootstrap.com/docs/5.3/assets/css/docs.css"
+      rel="stylesheet"
+    />
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
-    <link rel="stylesheet" href='css/unpage.css'>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="css/unpage.css" />
   </head>
   <body>
     <!-- Nav bar -->
@@ -39,10 +50,110 @@
       </li>
     </ul>
 
-    <p>Unpage page works!</p>
+    <!-- Hero div -->
+    <div class="hero vh-100 d-flex align-items-center">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-7 mx-auto">
+            <h1 class="display-4 text-white">
+              Shaping Resilient Cities: Aligning with SDG 11
+            </h1>
+            <p class="text-white my-3" style="font-size: 22px">
+              Explore how the pursuit of Sustainable Development Goal 11 is
+              transforming urban areas into resilient, inclusive, and
+              sustainable environments. Learn about the crucial role of
+              compliance with safety standards and the innovative strategies
+              driving urban resilience.
+            </p>
+            <a href="#intro" class="btn mr-3 btn-primary">Learn More</a>
+            <a href="#footer" class="btn btn-outline-light">Donate Here!</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Introduction Section -->
+    <div id="intro">
+      <div style="display: flex; align-items: center">
+        <div style="flex: 1">
+          <!-- Carousel -->
+          <div
+            id="carouselExample"
+            class="carousel slide"
+            data-bs-ride="carousel"
+          >
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img
+                  src="images/PolicyImg1.jpg"
+                  class="d-block w-100"
+                  alt="Ruins of a building post-earthquake"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="images/PolicyImg2.jpg"
+                  class="d-block w-100"
+                  alt="Description of your second image"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="images/PolicyImg3.PNG"
+                  class="d-block w-100"
+                  alt="Description of your third image"
+                />
+              </div>
+            </div>
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#carouselExample"
+              data-bs-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#carouselExample"
+              data-bs-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+          <!-- End of Carousel -->
+        </div>
+        <div id="textIntro" style="flex: 1">
+          <h1>Introduction: Building the Foundations of Resilient Cities</h1>
+          <p>
+            As global urban populations continue to rise, the challenges
+            associated with creating livable, sustainable, and resilient cities
+            come into focus. United Nations Sustainable Development Goal
+            11 (SDG 11) aims to ensure that cities and human settlements are
+            inclusive, safe, resilient, and sustainable. The recent earthquakes
+            in Turkey have underscored the dire consequences of non-compliance
+            with building safety regulations, showing off the critical need for
+            through urban planning and infrastructure development. This section
+            outlines the importance of aligning urban development strategies
+            with SDG 11 to mitigate the impacts of such disasters and to foster
+            sustainable growth in urban environments.
+          </p>
+        </div>
+      </div>
+    </div>
 
     <!-- Footer -->
     <footer
+      id="footer"
       class="text-center text-lg-start text-dark"
       style="background-color: #eceff1"
     >
