--- a/education.html
+++ b/education.html
@@ -23,7 +23,7 @@
       rel="stylesheet"
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href='css/education.css'>
+    <link rel="stylesheet" href="css/education.css" />
   </head>
   <body>
     <!-- Nav bar -->
@@ -50,10 +50,214 @@
       </li>
     </ul>
 
-    <p>Education page works!</p>
+    <!-- Hero div -->
+    <div class="hero vh-100 d-flex align-items-center">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-7 mx-auto">
+            <h1 class="display-4 text-white">
+              Prepare and Protect: Enhancing Disaster Readiness
+            </h1>
+            <p class="text-white my-3" style="font-size: 22px">
+              Gain essential knowledge and skills to safeguard yourself and your
+              loved ones against unforeseen disasters. Explore resources,
+              training, and practical steps to enhance your preparedness and
+              resilience.
+            </p>
+            <a href="#intro" class="btn mr-3 btn-primary">Learn More</a>
+            <a href="#footer" class="btn btn-outline-light">Donate Here!</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Introduction Section -->
+    <div id="intro">
+      <div style="display: flex; align-items: center">
+        <div style="flex: 1">
+          <!-- Carousel -->
+          <div
+            id="carouselExample"
+            class="carousel slide"
+            data-bs-ride="carousel"
+          >
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img
+                  src="images/redCross1.jpg"
+                  class="d-block w-100"
+                  alt="red cross woman handing out water"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="images/redCross2.jpg"
+                  class="d-block w-100"
+                  alt="Red cross handing out food"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="images/redCross3.jpg"
+                  class="d-block w-100"
+                  alt="red cross removing some one from a demolished building"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="images/redCross4.jpg"
+                  class="d-block w-100"
+                  alt="Red cross handing out drinks post earthquake"
+                />
+              </div>
+            </div>
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#carouselExample"
+              data-bs-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#carouselExample"
+              data-bs-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+          <!-- End of Carousel -->
+        </div>
+        <div id="textIntro" style="flex: 1">
+          <h1>
+            Empowering Communities through Disaster Preparedness Education
+          </h1>
+          <p>
+            Understanding and preparing for disasters is important in safeguarding
+            our communities. Building a culture of preparedness is not just about having supplies
+            ready; it's about making informed decisions and taking proactive
+            steps to mitigate risks. This page not only outlines how to create
+            comprehensive emergency plans and secure homes effectively but also
+            emphasizes the importance of community involvement and continuous
+            learning. By understanding and implementing these strategies,
+            individuals can transform their response to disasters from reactive
+            to proactive, ensuring they are ready to face challenges
+            confidently. By fostering a culture of preparedness,
+            we can enhance resilience and reduce the impact of disasters on our
+            lives.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Community action -->
+    <div class="container mt-4 unique-section">
+      <div class="row">
+        <div class="col-md-6 mb-3">
+          <h2 class="section-title" style="font-weight: bold">
+            Learning Resources, Training Opportunities, and Creating an
+            Emergency Action Plan
+          </h2>
+          <p class="section-text" style="font-size: 21px">
+            While being prepared for disasters encompasses many factors, first
+            aid training stands out as particularly vital. We urge everyone to
+            seek certified first aid training programs available through local
+            health services, community centers, or recognized organizations like
+            the Red Cross. These programs teach life-saving skills that are
+            indispensable in emergencies.
+          </p>
+        </div>
+        <div class="col-md-6">
+          <img
+            src="images/redcrossTraining.jpg"
+            alt="Man practicing CPR"
+            class="img-fluid mb-3 section-image float-right"
+          />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <img
+            src="images/EAP.jpg"
+            alt="Emergency Action Plan continuum"
+            class="img-fluid mb-3 section-image float-left"
+          />
+        </div>
+        <div class="col-md-6">
+          <p class="section-text" style="font-size: 21px">
+            Create a detailed family emergency plan that includes an
+            out-of-state contact, designated meeting places, and a well-stocked
+            supply kit with essentials like food, water, and medical supplies.
+            Ensure that every family member understands the plan and knows what
+            to do in various emergency scenarios.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Securing home section -->
+    <div style="overflow: auto">
+      <img
+        src="images/SecuringFurniture.jpg"
+        alt="Wardrobe being secured to the wall"
+        style="float: left; margin-right: 20px; width: 900px"
+      />
+      <h2 style="font-size: 40px; font-weight: bold">
+        Securing Your Home: Essential Safety Measures
+      </h2>
+      <p style="font-size: 25px">
+        To safeguard your family and home against disasters, it's essential to
+        implement safety measures. Secure heavy furniture and appliances
+        with straps and anchors to prevent tipping during disturbances, and
+        address any structural vulnerabilities to enhance your home’s
+        resilience. Store heavy and breakable objects on lower shelves and use
+        cabinet latches to keep contents in place during shaking. These
+        proactive steps not only minimize the risk of injury and property damage
+        but also fortify your living environment against emergencies, providing
+        peace of mind.
+      </p>
+      <div style="clear: both"></div>
+    </div>
+
+    <!-- Take action Section -->
+    <div class="container mt-4">
+      <h2 class="mb-3" style="font-size: 40px; font-weight: bold">
+        Take Action: Prepare, Practice, Protect
+      </h2>
+      <p style="font-size: 25px">
+        True disaster preparedness goes beyond personal readiness; it involves a
+        communal effort to build a safe and resilient society. We encourage
+        everyone to not only follow the guidelines discussed but also to become
+        advocates for preparedness in their own communities. Whether it's
+        through improving personal readiness, engaging in community efforts, or
+        supporting policy enhancements, your actions can lead to powerful
+        changes.
+      </p>
+      <div class="row justify-content-center">
+        <div class="col-md-6 text-center">
+          <img
+            src="images/redCrossCommunity.jpg"
+            alt="Crew removing debris from a building"
+            class="img-fluid mb-3 mx-auto d-block"
+          />
+          <p><strong>Red Cross Meeting with the Community</strong></p>
+        </div>
+      </div>
+    </div>
 
     <!-- Footer -->
-    <footer id="footer"
+    <footer
+      id="footer"
       class="text-center text-lg-start text-dark"
       style="background-color: #eceff1"
     >
